--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "electron-react-typescript",
-  "author": "Diego Fernandes <diego.schell.f@gmail.com>",
-  "version": "2.0.0",
-  "description": "An Electron boilerplate including TypeScript, React, Jest and ESLint.",
+  "name": "fantacy_5",
+  "author": "Kembert Nieves <kembert@gmail.com>",
+  "version": "1.0.0",
+  "description": "",
   "main": "./.webpack/main/index.js",
   "scripts": {
     "start": "electron-forge start",
@@ -15,10 +15,19 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "@types/lowdb": "^1.0.11",
+    "@types/react-datepicker": "^4.1.4",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/uuid": "^8.3.1",
+    "lowdb": "^3.0.0",
+    "moment": "^2.29.1",
     "react": "17.0.2",
+    "react-datepicker": "^4.1.1",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
-    "styled-components": "5.3.0"
+    "react-router-dom": "^5.2.0",
+    "styled-components": "5.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
@@ -40,12 +49,13 @@
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
     "@types/styled-components": "5.1.10",
-    "@typescript-eslint/eslint-plugin": "4.27.0",
-    "@typescript-eslint/parser": "4.27.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "babel-loader": "8.2.2",
     "cross-env": "7.0.3",
+    "css-loader": "^6.2.0",
     "electron": "13.1.2",
-    "eslint": "7.29.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard": "16.0.3",
     "eslint-plugin-import": "2.23.4",
@@ -55,8 +65,10 @@
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-standard": "5.0.0",
     "jest": "27.0.4",
+    "json-loader": "^0.5.7",
     "npm-run-all": "4.1.5",
     "prettier": "2.3.1",
+    "style-loader": "^3.2.1",
     "ts-jest": "27.0.3",
     "typescript": "4.3.4",
     "wait-on": "5.3.0"
