--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
-    "@types/lowdb": "^1.0.11",
-    "@types/react-datepicker": "^4.1.4",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/uuid": "^8.3.1",
     "lowdb": "^3.0.0",
     "moment": "^2.29.1",
+    "process": "^0.11.10",
     "react": "17.0.2",
     "react-datepicker": "^4.1.1",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
     "react-router-dom": "^5.2.0",
+    "react-select": "^5.2.1",
+    "react-to-pdf": "^0.0.14",
     "styled-components": "5.3.0",
+    "util": "^0.12.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -46,9 +46,13 @@
     "@testing-library/react": "11.2.7",
     "@types/electron-devtools-installer": "2.2.0",
     "@types/jest": "26.0.23",
+    "@types/lowdb": "^1.0.11",
     "@types/react": "17.0.11",
+    "@types/react-datepicker": "^4.1.4",
     "@types/react-dom": "17.0.8",
+    "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "5.1.10",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "babel-loader": "8.2.2",
@@ -70,6 +74,7 @@
     "prettier": "2.3.1",
     "style-loader": "^3.2.1",
     "ts-jest": "27.0.3",
+    "types": "^0.1.1",
     "typescript": "4.3.4",
     "wait-on": "5.3.0"
   },
