--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "fs": "^0.0.1-security",
     "lowdb": "^3.0.0",
     "moment": "^2.29.1",
     "process": "^0.11.10",
