--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "assert": ["./assert.ts"]
+    }
   }
 }
