--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "fantacy_5",
-  "productName": "Fantacy   5",
+  "name": "fantasy-5",
+  "productName": "fantasy-5",
   "author": "Kembert Nieves <kembert@gmail.com>",
   "version": "1.0.0",
-  "description": "",
+  "description": "fantasy-5",
   "main": "./.webpack/main/index.js",
   "scripts": {
     "start": "electron-forge start",
@@ -11,10 +11,7 @@
     "make": "electron-forge make",
     "release": "electron-forge publish",
     "lint": "eslint . --ext js,ts",
-    "test": "jest",
-    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . fantacy-5-app --overwrite --asar=true --platform=win64 --arch=ia64 --icon=electron/assets/raffle.ico --prune=true --out=release-builds --version-string.CompanyName=MBSoftware --version-string.FileDescription=V1 --version-string.ProductName=\"Fantacy 5\"",
-    "package-linux": "electron-packager . fantacy-5-app --overwrite --asar=true --platform=linux --arch=x64 --icon=electron/assets/raffle.ico --prune=true --out=release-builds"
+    "test": "jest"
   },
   "keywords": [],
   "license": "MIT",
@@ -44,6 +41,7 @@
     "@electron-forge/maker-deb": "6.0.0-beta.57",
     "@electron-forge/maker-rpm": "6.0.0-beta.57",
     "@electron-forge/maker-squirrel": "6.0.0-beta.57",
+    "@electron-forge/maker-wix": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "6.0.0-beta.57",
     "@electron-forge/plugin-webpack": "6.0.0-beta.57",
     "@marshallofsound/webpack-asset-relocator-loader": "0.5.0",
@@ -88,9 +86,9 @@
   "config": {
     "forge": {
       "packagerConfig": {
-        "name": "Electron starter",
-        "executableName": "electron-starter",
-        "icon": "assets/icon",
+        "name": "fantasy-5",
+        "executableName": "fantasy-5",
+        "icon": "assets/raffle.ico",
         "extraResource": [
           "assets"
         ]
@@ -120,18 +118,24 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "Electron Starter"
+            "name": "fantasy-5"
           }
         },
         {
           "name": "@electron-forge/maker-zip",
           "platforms": [
-            "darwin"
+            "darwin",
+            "linux"
           ]
         },
         {
           "name": "@electron-forge/maker-deb",
-          "config": {}
+          "config": {
+            "executableName": "fantasy-5",
+            "ui": {
+              "chooseDirectory": true
+            }
+          }
         },
         {
           "name": "@electron-forge/maker-rpm",
