--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,7 @@
     "node": true,
     "jest": true
   },
-  "extends": [
-    "standard",
-    "prettier"
-  ],
+  "extends": ["standard", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
@@ -17,12 +14,15 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "prettier",
-    "@typescript-eslint"
-  ],
+  "plugins": ["react", "prettier", "@typescript-eslint"],
   "rules": {
     "react/prop-types": "off"
+  },
+  "globals": {
+    "React": true,
+    "context": true,
+    "expect": true,
+    "jsdom": true,
+    "JSX": true
   }
 }
